# liby

./: CMakeLists.txt  README.md  main.c
graphics/: CMakeLists.txt
graphics/src/: device.c  device.h  errors.h  window.c  window.h
math/: CMakeLists.txt
math/src/: vector2D.c  vector2D.h  vector3D.c  vector3D.h
